# teraflops

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
docs/: default.nix  deployment.nix
examples/digitalocean/: flake.nix
examples/hcloud/: flake.nix
examples/opentofu/: flake.nix
examples/virtualbox/: flake.nix
nix/: teraflops.nix
nix/digitalocean/: default.nix  digitalocean.nix  net.nix
nix/hcloud/: default.nix  hcloud.nix
nix/incus/: default.nix
nix/linode/: default.nix
nix/lxd/: default.nix  lxd.nix
nix/virtualbox/: default.nix  virtualbox-image-nixops.nix  virtualbox.nix
teraflops/: main.py
teraflops/nix/: bootstrap.nix  eval.nix  hive.nix  repl.nix  terraform.nix
